--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -17,11 +17,11 @@
 #
 
 cygnus-ngsi.sources = http-source
-cygnus-ngsi.sinks = mysql-sink
-cygnus-ngsi.channels = mysql-channel
+cygnus-ngsi.sinks = mysql-sink mongo-sink sth-sink
+cygnus-ngsi.channels = mysql-channel mongo-channel sth-channel
 
-cygnus-ngsi.sources.http-source.channels = mysql-channel
 cygnus-ngsi.sources.http-source.type = org.apache.flume.source.http.HTTPSource
+cygnus-ngsi.sources.http-source.channels = mysql-channel mongo-channel sth-channel
 cygnus-ngsi.sources.http-source.port = 5050
 cygnus-ngsi.sources.http-source.handler = com.telefonica.iot.cygnus.handlers.NGSIRestHandler
 cygnus-ngsi.sources.http-source.handler.notification_target = /notify
@@ -32,8 +32,8 @@ cygnus-ngsi.sources.http-source.interceptors.ts.type = timestamp
 cygnus-ngsi.sources.http-source.interceptors.gi.type = com.telefonica.iot.cygnus.interceptors.NGSIGroupingInterceptor$Builder
 cygnus-ngsi.sources.http-source.interceptors.gi.grouping_rules_conf_file = /opt/apache-flume/conf/grouping_rules.conf
 
-cygnus-ngsi.sinks.mysql-sink.channel = mysql-channel
 cygnus-ngsi.sinks.mysql-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMySQLSink
+cygnus-ngsi.sinks.mysql-sink.channel = mysql-channel
 cygnus-ngsi.sinks.mysql-sink.enable_grouping = false
 cygnus-ngsi.sinks.mysql-sink.enable_lowercase = false
 cygnus-ngsi.sinks.mysql-sink.mysql_host = mysql
@@ -46,7 +46,53 @@ cygnus-ngsi.sinks.mysql-sink.batch_size = 10
 cygnus-ngsi.sinks.mysql-sink.batch_timeout = 5
 cygnus-ngsi.sinks.mysql-sink.batch_ttl = 0
 
+cygnus-ngsi.sinks.mongo-sink.type = com.telefonica.iot.cygnus.sinks.NGSIMongoSink
+cygnus-ngsi.sinks.mongo-sink.channel = mongo-channel
+cygnus-ngsi.sinks.mongo-sink.enable_grouping = false
+cygnus-ngsi.sinks.mongo-sink.enable_lowercase = false
+cygnus-ngsi.sinks.mongo-sink.mongo_hosts = mongo:27017
+cygnus-ngsi.sinks.mongo-sink.mongo_username =
+cygnus-ngsi.sinks.mongo-sink.mongo_password =
+cygnus-ngsi.sinks.mongo-sink.db_prefix = sth_
+cygnus-ngsi.sinks.mongo-sink.collection_prefix = sth_
+cygnus-ngsi.sinks.mongo-sink.should_hash = false
+cygnus-ngsi.sinks.mongo-sink.data_model = dm-by-entity
+cygnus-ngsi.sinks.mongo-sink.attr_persistence = row
+cygnus-ngsi.sinks.mongo-sink.batch_size = 10
+cygnus-ngsi.sinks.mongo-sink.batch_timeout = 5
+cygnus-ngsi.sinks.mongo-sink.batch_ttl = 0
+cygnus-ngsi.sinks.mongo-sink.data_expiration = 0
+cygnus-ngsi.sinks.mongo-sink.collections_size = 0
+cygnus-ngsi.sinks.mongo-sink.max_documents = 0
+
+cygnus-ngsi.sinks.sth-sink.type = com.telefonica.iot.cygnus.sinks.NGSISTHSink
+cygnus-ngsi.sinks.sth-sink.channel = sth-channel
+cygnus-ngsi.sinks.sth-sink.enable_grouping = false
+cygnus-ngsi.sinks.sth-sink.enable_lowercase = false
+cygnus-ngsi.sinks.sth-sink.mongo_hosts = mongo:27017
+cygnus-ngsi.sinks.sth-sink.mongo_username =
+cygnus-ngsi.sinks.sth-sink.mongo_password =
+cygnus-ngsi.sinks.sth-sink.db_prefix = sth_
+cygnus-ngsi.sinks.sth-sink.collection_prefix = sth_
+cygnus-ngsi.sinks.sth-sink.should_hash = false
+cygnus-ngsi.sinks.sth-sink.data_model = dm-by-entity
+cygnus-ngsi.sinks.sth-sink.attr_persistence = row
+cygnus-ngsi.sinks.sth-sink.batch_size = 10
+cygnus-ngsi.sinks.sth-sink.batch_timeout = 5
+cygnus-ngsi.sinks.sth-sink.batch_ttl = 0
+cygnus-ngsi.sinks.sth-sink.data_expiration = 0
+cygnus-ngsi.sinks.sth-sink.collections_size = 0
+cygnus-ngsi.sinks.sth-sink.max_documents = 0
+
 cygnus-ngsi.channels.mysql-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
 cygnus-ngsi.channels.mysql-channel.capacity = 1000
 cygnus-ngsi.channels.mysql-channel.transactionCapacity = 100
+
+cygnus-ngsi.channels.mongo-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
+cygnus-ngsi.channels.mongo-channel.capacity = 1000
+cygnus-ngsi.channels.mongo-channel.transactionCapacity = 100
+
+cygnus-ngsi.channels.sth-channel.type = com.telefonica.iot.cygnus.channels.CygnusMemoryChannel
+cygnus-ngsi.channels.sth-channel.capacity = 1000
+cygnus-ngsi.channels.sth-channel.transactionCapacity = 100
 
