--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,18 +63,18 @@ pages:
           - 'Reporting issues and contact information': 'cygnus-ngsi/user_and_programmer_guide/issues_and_contact.md'
       - 'Flume extensions catalogue':
           - 'Introduction': 'cygnus-ngsi/flume_extensions_catalogue/introduction.md'
-          - 'OrionRESTHandler': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_rest_handler.md'
-          - 'OrionCartoDBSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_cartodb_sink.md'
-          - 'OrionCKANSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_ckan_sink.md'
-          - 'OrionDynamoDBSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_dynamodb_sink.md'
-          - 'OrionKafkaSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_kafka_sink.md'
-          - 'OrionHDFSSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_hdfs_sink.md'
-          - 'OrionMongoSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_mongo_sink.md'
-          - 'OrionMySQLSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_mysql_sink.md'
-          - 'OrionPostgreSQLSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_postgresql_sink.md'
-          - 'OrionSTHSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_sth_sink.md'
-          - 'OrionTestSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_test_sink.md'
-          - 'GroupingInterceptor': 'cygnus-ngsi/flume_extensions_catalogue/grouping_interceptor.md'
+          - 'NGSIRestHandler': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_rest_handler.md'
+          - 'NGSICartoDBSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_cartodb_sink.md'
+          - 'NGSICKANSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_ckan_sink.md'
+          - 'NGSIDynamoDBSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_dynamodb_sink.md'
+          - 'NGSIKafkaSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_kafka_sink.md'
+          - 'NGSIHDFSSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_hdfs_sink.md'
+          - 'NGSIMongoSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_mongo_sink.md'
+          - 'NGSIMySQLSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_mysql_sink.md'
+          - 'NGSIPostgreSQLSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_postgresql_sink.md'
+          - 'NGSISTHSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_sth_sink.md'
+          - 'NGSITestSink': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_test_sink.md'
+          - 'NGSIGroupingInterceptor': 'cygnus-ngsi/flume_extensions_catalogue/ngsi_grouping_interceptor.md'
           - 'RoundRobinChannelSelector': 'cygnus-ngsi/flume_extensions_catalogue/round_robin_channel_selector.md'
           - 'Reporting issues and contact information': 'cygnus-ngsi/flume_extensions_catalogue/issues_and_contact.md'
   - 'cygnus-twitter agent':
